--- a/to-do-list/package.json
+++ b/to-do-list/package.json
@@ -12,8 +12,10 @@
     "@types/react-dom": "^18.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
     "validator": "^13.9.0",
