--- a/e-commerce_app/package.json
+++ b/e-commerce_app/package.json
@@ -16,8 +16,9 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "firebase": "^9.18.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^0.14.0 || ^15.0.1",
+    "react-dom": "^0.14.0 || ^15.0.1",
+    "react-loading": "^2.0.3",
     "react-onclickoutside": "^6.13.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.9.0",
@@ -28,6 +29,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.9",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -37,6 +39,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -58,6 +61,18 @@
   "devDependencies": {
     "@types/react-onclickoutside": "^6.7.4",
     "@types/react-slick": "^0.23.10",
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "coverage-node": "^8.0.0",
+    "matchmedia-polyfill": "^0.3.2"
+  },
+  "peerDependencies": {
+    "react": "^0.14.0 || ^15.0.1",
+    "react-dom": "^0.14.0 || ^15.0.1"
+  },
+  "jest": {
+    "setupFiles": [
+      "./src/setupTests.js",
+      "./src/node_modules/react-scripts/config/polyfills.js"
+    ]
   }
 }
