--- a/e-commerce_app/package.json
+++ b/e-commerce_app/package.json
@@ -16,16 +16,15 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "firebase": "^9.18.0",
-    "react": "^0.14.0 || ^15.0.1",
-    "react-dom": "^0.14.0 || ^15.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
-    "react-onclickoutside": "^6.13.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.9.0",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
-    "react-toastify": "^9.1.2",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
@@ -39,7 +38,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -65,5 +63,4 @@
     "coverage-node": "^8.0.0",
     "matchmedia-polyfill": "^0.3.2"
   }
-
 }
